feat: Adicionar suporte a variáveis de ambiente com .env

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -219,7 +219,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://3.22.171.5:3000/api/dados';
+        const API_URL = 'http://localhost:3000/api/dados';
         
         let editandoId = null;
 
